--- a/src/Styles/orders.css
+++ b/src/Styles/orders.css
@@ -1,6 +1,6 @@
 .orders-container {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(to top, #fbfbfbcd, #bdc2c783), url('../Images/delivery.jpeg') fixed;
     background-size: cover;
     padding: 90px 20px;
