--- a/src/Styles/orders.css
+++ b/src/Styles/orders.css
@@ -113,3 +113,22 @@
     width: 20px;
 }
 
+@media (max-width: 1300px) {
+    .orders-content {
+        grid-template-columns: auto auto auto;
+    }
+}
+
+@media (max-width: 980px) {
+    .orders-content {
+        grid-template-columns: auto auto;
+    }
+}
+
+@media (max-width: 650px) {
+    .orders-content {
+        grid-template-columns: auto;
+    }
+}
+
+
